Branch for XML-RPC fix