@@ -6,6 +6,7 @@ import icecube.daq.juggler.test.LoggingCase;
 import icecube.daq.juggler.test.MockCache;
 import icecube.daq.juggler.test.MockHandler;
 import icecube.daq.juggler.test.MockOutputEngine;
+import icecube.daq.util.LocatePDAQ;
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -106,6 +107,9 @@ public class DAQCompServerTest
     public final void tearDown()
         throws FileNotFoundException
     {
+        // make sure we don't leave cached directory paths pointing at 'tmpDir'
+        LocatePDAQ.clearCache();
+
         if (tmpDir != null) {
             try {
                 deleteRecursive(tmpDir);
@@ -314,7 +318,7 @@ public class DAQCompServerTest
 
         MockServer srvr = new MockServer(mockComp, new String[0]);
 
-        Object badConn = new Integer(666);
+        Object badConn = Integer.valueOf(666);
         try {
             srvr.connect(new Object[] { badConn });
             fail("Should have failed due to bad connection type");
@@ -349,9 +353,9 @@ public class DAQCompServerTest
         HashMap connMap = new HashMap();
         connMap.put("type", connType);
         connMap.put("compName", DAQCmdInterface.DAQ_EVENTBUILDER);
-        connMap.put("compNum", new Integer(0));
+        connMap.put("compNum", Integer.valueOf(0));
         connMap.put("host", "localhost");
-        connMap.put("port", new Integer(port));
+        connMap.put("port", Integer.valueOf(port));
 
         String rtnVal;
 
@@ -760,7 +764,8 @@ public class DAQCompServerTest
 
         File testTmp = File.createTempFile("foo", "").getParentFile();
 
-        File tmpDir = new File(testTmp, "tmpTrunk");
+        // tearDown() method will remove this directory
+        tmpDir = new File(testTmp, "tmpTrunk");
 
         File ddTop = new File(tmpDir, "dispatch");
         ddTop.mkdirs();
@@ -967,8 +972,8 @@ public class DAQCompServerTest
         MockServer srvr = new MockServer(mockComp, new String[0]);
 
         Object[] flasherCfg = new Object[] {
-            "ABC", new Integer(12), new Integer(34),
-            new Integer(56), new Integer(78), new Integer(90),
+            "ABC", Integer.valueOf(12), Integer.valueOf(34),
+            Integer.valueOf(56), Integer.valueOf(78), Integer.valueOf(90),
         };
 
         ArrayList list = new ArrayList();
